manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doug-translate
spec:
  selector:
    matchLabels:
      app: doug-translate
  replicas: 1
  template:
    metadata:
      labels:
        app: doug-translate
    spec:
      containers:
        - name: doug-translate
          image: defenseunicorns/doug-translate:0.0.1
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "500m"
            limits:
              memory: "128Mi"
              cpu: "1000m"
