manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: doug-translate
  labels:
    app: doug-translate
    service: doug-translate
spec:
  selector:
    app: doug-translate
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
