manifests/connect.yaml
apiVersion: v1
kind: Service
metadata:
  name: doug-translate-service
  annotations:
    zarf.dev/connect-description: "View the translation UI"
  labels:
    zarf.dev/connect-name: "doug-translate"
spec:
  selector:
    app: doug-translate
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: doug-translate
spec:
  gateways:
    - istio-system/tenant
  hosts:
    - "doug-translate.###ZARF_VAR_DOMAIN###"
  http:
    - route:
        - destination:
            host: doug-translate
            port:
              number: 3000
