manifests/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: doug-translate-gateway
spec:
  selector:
    istio: tenant
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "doug-translate.###ZARF_VAR_DOMAIN###"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: doug-translate
spec:
  gateways:
    - doug-translate-gateway
  hosts:
    - "doug-translate.###ZARF_VAR_DOMAIN###"
  http:
    - route:
        - destination:
            host: doug-translate.doug-translate.svc.cluster.local
            port:
              number: 3000
